base/che-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: che-server
  name: che-server
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: che-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: che-server
    spec:
      containers:
      - env:
        - name: OPENSHIFT_KUBE_PING_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: CHE_JDBC_USERNAME
          valueFrom:
            secretKeyRef:
              key: che-postgres-user
              name: che
        - name: CHE_JDBC_PASSWORD
          valueFrom:
            secretKeyRef:
              key: che-postgres-password
              name: che
        image: eclipse/che-server:7.0.0-rc-3.0
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /api/system/state
            port: 5080
            scheme: HTTP
          initialDelaySeconds: 120
          timeoutSeconds: 10
        name: che
        ports:
        - containerPort: 5080
          name: http
        - containerPort: 8000
          name: http-debug
        - containerPort: 8888
          name: jgroups-ping
        - containerPort: 8087
          name: http-metrics
        readinessProbe:
          httpGet:
            path: /api/system/state
            port: 5080
            scheme: HTTP
          initialDelaySeconds: 15
          timeoutSeconds: 60
        resources:
          limits:
            memory: 600Mi
          requests:
            memory: 256Mi
        securityContext:
          runAsUser: 1724
      securityContext:
        fsGroup: 1724
      serviceAccountName: che
