base/keycloak-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - command:
        - /scripts/kc_realm_user.sh
        image: eclipse/che-keycloak:nightly
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 11
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 30
        name: keycloak
        ports:
        - containerPort: 8080
        readinessProbe:
          failureThreshold: 10
          httpGet:
            path: auth/js/keycloak.js
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            memory: 1536Mi
          requests:
            memory: 1024Mi
        securityContext:
          runAsUser: 26
        volumeMounts:
        - mountPath: /opt/jboss/keycloak/standalone/data
          name: keycloak-data
        - mountPath: /opt/jboss/keycloak/standalone/log
          name: keycloak-log
      restartPolicy: Always
      serviceAccountName: che-keycloak
      securityContext:
        fsGroup: 26
      volumes:
      - name: keycloak-data
        persistentVolumeClaim:
          claimName: keycloak-data
      - name: keycloak-log
        persistentVolumeClaim:
          claimName: keycloak-log
