base/che-host-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: che
  name: che-host
spec:
  ports:
  - name: http
    port: 5080
    protocol: TCP
    targetPort: 5080
  - name: metrics
    port: 8087
    protocol: TCP
    targetPort: 8087
  selector:
    app: che-server
