base/keycloak-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  ports:
  - name: "5050"
    port: 5050
    targetPort: 8080
  selector:
    app: keycloak
