base/keycloak-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: keycloak-ingress
spec:
  rules:
  - host: keycloak.cnative.io
    http:
      paths:
      - backend:
          serviceName: keycloak
          servicePort: 5050
        path: /
